--- a/index.html
+++ b/index.html
@@ -41,13 +41,52 @@
           </div>
         </div>
         <!-- Right button menu -->
-        <div class="hidden items-center space-x-6 font-bold text-grayishViolet lg:flex">
-          <div class="hover:text-veryDarkViolet hover:cursor-pointer">Login</div>
-          <a href="#" class="px-8 py-3 font-bold text-white bg-cyan rounded-full hover:opacity-70">Sign Up</a>
+        <div
+          class="hidden items-center space-x-6 font-bold text-grayishViolet lg:flex"
+        >
+          <div class="hover:text-veryDarkViolet hover:cursor-pointer">
+            Login
+          </div>
+          <a
+            href="#"
+            class="px-8 py-3 font-bold text-white bg-cyan rounded-full hover:opacity-70"
+            >Sign Up</a
+          >
         </div>
         <!-- ZTodo Hamburger Menu -->
       </div>
       <!-- Todo mobile menu -->
     </nav>
+    <!-- Hero section -->
+    <section id="hero">
+      <!-- Hero container -->
+      <div class="container flex flex-col-reverse mx-auto p-6 lg:flex-row">
+        <!-- Content -->
+        <div class="flex flex-col space-y-10 mb-44 lg:mt-16 lg:w-1/2 xl:bg-52">
+          <h1
+            class="text-5xl font-bold text-center lg:text-6xl lg:max-w-md lg:text-left"
+          >
+            More than just shorter links.
+          </h1>
+          <p
+            class="text-2xl text-center text-gray-400 lg:max-w-md lg:text-left"
+          >
+            Build your brand's recognition and get detailed insights on how your
+            links are performing.
+          </p>
+          <div class="mx-auto lg:mx-0">
+            <a
+              href="#"
+              class="py-5 px-10 text-2xl font-bold text-white bg-cyan rounded-full lg:py-4 hover:opacity-70"
+              >Get Started</a
+            >
+          </div>
+        </div>
+        <!-- Image -->
+        <div class="mb-24 mx-auto md:w-180 lg:w-1/2 lg:mb-0">
+          <img src="images/illustration-working.svg" alt="Working" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
