--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/script.js" defer></script>
     <title>Short Link URL Website</title>
   </head>
   <body>
@@ -99,13 +100,15 @@
         >
           <input
             type="text"
-            class="flex-1 p-3 border-2 rounded-lg placeholder-yellow-500 focus:outline-none"
+            class="flex-1 p-3 border-2 rounded-lg  placeholder-yellow-500 focus:outline-none"
             placeholder="Shorten a link here"
             id="link-input"
           />
           <button class="px-10 py-3 text-white bg-cyan rounded-lg hover:bg-cyanLight focus:outline-none md:py-2">
             Shorten It
           </button>
+          <!-- Error Message -->
+          <div id="err-msg" class="absolute left-7 bottom-3 text-red text-sm italic"></div>
         </form>
         <!-- Link 1 -->
         <div class="flex flex-col items-center justify-between w-full p-6 bg-white rounded-lg md:flex-row">
